# glad_glfw_demo

./: CMakeLists.txt  glad.c  main.cpp
include/: GL_Drawer.h  practice.h
runtime/: opengl
shaders/: baseShader.frag  better_triangle.frag  rect.frag  red_triangle.frag  tex.frag
source/: GL_Drawer.cpp  practice.cpp
